@@ -3,6 +3,7 @@ package dev.fileeditor.votl.listeners;
 import static dev.fileeditor.votl.utils.CastUtil.castLong;
 
 import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -12,6 +13,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import dev.fileeditor.votl.App;
@@ -76,6 +78,8 @@ public class InteractionListener extends ListenerAdapter {
 	private final DBUtil db;
 	private final EventWaiter waiter;
 
+	private final int MAX_GROUP_SELECT = 1;
+
 	public InteractionListener(App bot, EventWaiter waiter) {
 		this.bot = bot;
 		this.lu = bot.getLocaleUtil();
@@ -103,7 +107,7 @@ public class InteractionListener extends ListenerAdapter {
 		event.getHook().sendMessageEmbeds(new EmbedBuilder().setColor(Constants.COLOR_SUCCESS).setDescription(lu.getText(event, path)).build()).setEphemeral(true).queue();
 	}
 
-	// Check for cooldown parametrs, if exists - check if cooldown active, else apply it
+	// Check for cooldown parameters, if exists - check if cooldown active, else apply it
 	private void runButtonInteraction(ButtonInteractionEvent event, @Nullable Cooldown cooldown, @Nonnull Runnable function) {
 		if (cooldown != null) {
 			String key = getCooldownKey(cooldown, event);
@@ -118,93 +122,79 @@ public class InteractionListener extends ListenerAdapter {
 		function.run();
 	}
 
-	private final Set<String> acceptableButtons = Set.of("verify", "role", "ticket", "tag", "invites", "delete", "voice", "blacklist", "strikes", "unban_sync");
-
-	private boolean isAcceptedId(final String id) {
-		for (String match : acceptableButtons) {
-			if (id.startsWith(match)) {
-				return true;
-			}
-		}
-		return false;
-	}
-
+	private final Set<String> acceptableButtons = Set.of(
+		"verify", "role", "ticket", "tag", "invites",
+		"delete", "voice", "blacklist", "strikes", "sync_unban",
+		"sync_ban", "sync_kick", "thread"
+	);
 
 	@Override
 	public void onButtonInteraction(@Nonnull ButtonInteractionEvent event) {
-		String buttonId = event.getComponentId();
-
-		if (!isAcceptedId(buttonId)) return;
+		String[] actions = event.getComponentId().split(":");
+		if (!acceptableButtons.contains(actions[0])) return;
 
 		// Acknowledge interaction
 		event.deferEdit().queue(null, new ErrorHandler().ignore(ErrorResponse.UNKNOWN_INTERACTION));
 
 		try {
-			if (buttonId.startsWith("verify")) {
-				runButtonInteraction(event, Cooldown.BUTTON_VERIFY, () -> buttonVerify(event));
-			} else if (buttonId.startsWith("role")) {
-				String action = buttonId.split(":")[1];
-				switch (action) {
-					case "start_request" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_SHOW, () -> buttonRoleShowSelection(event));
-					case "other" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_OTHER, () -> buttonRoleSelectionOther(event));
-					case "clear" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_CLEAR, () -> buttonRoleSelectionClear(event));
-					case "remove" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_REMOVE, () -> buttonRoleRemove(event));
-					case "toggle" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_TOGGLE, () -> buttonRoleToggle(event));
+			switch (actions[0]) {
+				case "verify" -> runButtonInteraction(event, Cooldown.BUTTON_VERIFY, () -> buttonVerify(event));
+				case "role" -> {
+					switch (actions[1]) {
+						case "start_request" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_SHOW, () -> buttonRoleShowSelection(event));
+						case "other" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_OTHER, () -> buttonRoleSelectionOther(event));
+						case "clear" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_CLEAR, () -> buttonRoleSelectionClear(event));
+						case "remove" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_REMOVE, () -> buttonRoleRemove(event));
+						case "toggle" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_TOGGLE, () -> buttonRoleToggle(event));
+					}
 				}
-			} else if (buttonId.startsWith("ticket")) {
-				String action = buttonId.split(":")[1];
-				switch (action) {
-					case "role_create" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_TICKET, () -> buttonRoleTicketCreate(event));
-					case "role_approve" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_APPROVE, () -> buttonRoleTicketApprove(event));
-					case "close" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CLOSE, () -> buttonTicketClose(event));
-					case "cancel" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CANCEL, () -> buttonTicketCloseCancel(event));
-					case "claim" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CLAIM, () -> buttonTicketClaim(event));
-					case "unclaim" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_UNCLAIM, () -> buttonTicketUnclaim(event));
+				case "ticket" -> {
+					switch (actions[1]) {
+						case "role_create" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_TICKET, () -> buttonRoleTicketCreate(event));
+						case "role_approve" -> runButtonInteraction(event, Cooldown.BUTTON_ROLE_APPROVE, () -> buttonRoleTicketApprove(event));
+						case "close" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CLOSE, () -> buttonTicketClose(event));
+						case "cancel" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CANCEL, () -> buttonTicketCloseCancel(event));
+						case "claim" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CLAIM, () -> buttonTicketClaim(event));
+						case "unclaim" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_UNCLAIM, () -> buttonTicketUnclaim(event));
+					}
 				}
-			} else if (buttonId.startsWith("tag")) {
-				runButtonInteraction(event, Cooldown.BUTTON_TICKET_CREATE, () -> buttonTagCreateTicket(event));
-			} else if (buttonId.startsWith("delete")) {
-				runButtonInteraction(event, Cooldown.BUTTON_REPORT_DELETE, () -> buttonReportDelete(event));
-			} else if (buttonId.startsWith("voice")) {
-				if (!event.getMember().getVoiceState().inAudioChannel()) {
-					sendError(event, "bot.voice.listener.not_in_voice");
-					return;
+				case "tag" -> runButtonInteraction(event, Cooldown.BUTTON_TICKET_CREATE, () -> buttonTagCreateTicket(event));
+				case "delete" -> runButtonInteraction(event, Cooldown.BUTTON_REPORT_DELETE, () -> buttonReportDelete(event));
+				case "voice" -> {
+					if (!event.getMember().getVoiceState().inAudioChannel()) {
+						sendError(event, "bot.voice.listener.not_in_voice");
+						return;
+					}
+					Long channelId = db.voice.getChannel(event.getUser().getIdLong());
+					if (channelId == null) {
+						sendError(event, "errors.no_channel");
+						return;
+					}
+					VoiceChannel vc = event.getGuild().getVoiceChannelById(channelId);
+					if (vc == null) return;
+					switch (actions[1]) {
+						case "lock" -> runButtonInteraction(event, null, () -> buttonVoiceLock(event, vc));
+						case "unlock" -> runButtonInteraction(event, null, () -> buttonVoiceUnlock(event, vc));
+						case "ghost" -> runButtonInteraction(event, null, () -> buttonVoiceGhost(event, vc));
+						case "unghost" -> runButtonInteraction(event, null, () -> buttonVoiceUnghost(event, vc));
+						case "permit" -> runButtonInteraction(event, null, () -> buttonVoicePermit(event));
+						case "reject" -> runButtonInteraction(event, null, () -> buttonVoiceReject(event));
+						case "perms" -> runButtonInteraction(event, null, () -> buttonVoicePerms(event, vc));
+						case "delete" -> runButtonInteraction(event, null, () -> buttonVoiceDelete(event, vc));
+					}
 				}
-				Long channelId = db.voice.getChannel(event.getUser().getIdLong());
-				if (channelId == null) {
-					sendError(event, "errors.no_channel");
-					return;
-				}
-				VoiceChannel vc = event.getGuild().getVoiceChannelById(channelId);
-				if (vc == null) return;
-				String action = buttonId.split(":")[1];
-				switch (action) {
-					case "lock" -> runButtonInteraction(event, null, () -> buttonVoiceLock(event, vc));
-					case "unlock" -> runButtonInteraction(event, null, () -> buttonVoiceUnlock(event, vc));
-					case "ghost" -> runButtonInteraction(event, null, () -> buttonVoiceGhost(event, vc));
-					case "unghost" -> runButtonInteraction(event, null, () -> buttonVoiceUnghost(event, vc));
-					case "permit" -> runButtonInteraction(event, null, () -> buttonVoicePermit(event));
-					case "reject" -> runButtonInteraction(event, null, () -> buttonVoiceReject(event));
-					case "perms" -> runButtonInteraction(event, null, () -> buttonVoicePerms(event, vc));
-					case "delete" -> runButtonInteraction(event, null, () -> buttonVoiceDelete(event, vc));
-				}
-			} else if (buttonId.startsWith("blacklist")) {
-				runButtonInteraction(event, null, () -> buttonBlacklist(event));
-			} else if (buttonId.startsWith("unban_sync")) {
-				runButtonInteraction(event, null, () -> buttonUnbanSync(event));
-			} else if (buttonId.startsWith("strikes")) {
-				runButtonInteraction(event, Cooldown.BUTTON_SHOW_STRIKES, () -> buttonShowStrikes(event));
+				case "blacklist" -> runButtonInteraction(event, Cooldown.BUTTON_SYNC_ACTION, () -> buttonBlacklist(event));
+				case "sync_unban" -> runButtonInteraction(event, null, () -> buttonSyncUnban(event));
+				case "sync_ban" -> runButtonInteraction(event, Cooldown.BUTTON_SYNC_ACTION, () -> buttonSyncBan(event));
+				case "sync_kick" -> runButtonInteraction(event, Cooldown.BUTTON_SYNC_ACTION, () -> buttonSyncKick(event));
+				case "strikes" -> runButtonInteraction(event, Cooldown.BUTTON_SHOW_STRIKES, () -> buttonShowStrikes(event));
+				case "manage-confirm" -> runButtonInteraction(event, Cooldown.BUTTON_MODIFY_CONFIRM, () -> buttonModifyConfirm(event));
 			}
 		} catch (Throwable t) {
-			// Logs throwable and trys to respond to the user with the error
-			// Thrown errors are not user's error, but code's fault as such things should be catched earlier and replied properly
+			// Logs throwable and tries to respond to the user with the error
+			// Thrown errors are not user's error, but code's fault as such things should be caught earlier and replied properly
 			bot.getAppLogger().error("ButtonInteraction Exception", t);
-			event.getHook().sendMessageEmbeds(new EmbedBuilder().setColor(Constants.COLOR_FAILURE)
-				.setTitle(lu.getLocalized(event.getUserLocale(), "errors.title"))
-				.setDescription(lu.getLocalized(event.getUserLocale(), "errors.unknown"))
-				.addField(lu.getLocalized(event.getUserLocale(), "errors.additional"), MessageUtil.limitString(t.getMessage(), 1024), false)
-				.build()
-			).setEphemeral(true).queue(null, new ErrorHandler().ignore(ErrorResponse.UNKNOWN_INTERACTION));
+			bot.getEmbedUtil().sendUnknownError(event.getHook(), event.getUserLocale(), t.getMessage());
 		}
 	}
 
@@ -228,7 +218,7 @@ public class InteractionListener extends ListenerAdapter {
 		}
 
 		// Check if user is blacklisted
-		List<Integer> groupIds = new ArrayList<Integer>();
+		List<Integer> groupIds = new ArrayList<>();
 		groupIds.addAll(db.group.getOwnedGroups(guild.getIdLong()));
 		groupIds.addAll(db.group.getGuildGroups(guild.getIdLong()));
 		for (int groupId : groupIds) {
@@ -239,12 +229,10 @@ public class InteractionListener extends ListenerAdapter {
 		}
 
 		guild.addRoleToMember(member, role).reason("Verification completed").queue(
-			success -> {
-				event.getHook().sendMessage(Constants.SUCCESS).setEphemeral(true).queue();
-			},
+			success -> event.getHook().sendMessage(Constants.SUCCESS).setEphemeral(true).queue(),
 			failure -> {
 				sendError(event, "bot.verification.failed_role");
-				bot.getAppLogger().warn("Was unable to add verify role to user in "+guild.getName()+"("+guild.getId()+")", failure);
+				bot.getAppLogger().warn("Was unable to add verify role to user in {}({})", guild.getName(), guild.getId(), failure);
 			}
 		);
 	}
@@ -266,7 +254,7 @@ public class InteractionListener extends ListenerAdapter {
 			db.tickets.closeTicket(Instant.now(), channelId, "BOT: Channel deleted (not found)");
 		}
 
-		List<ActionRow> actionRows = new ArrayList<ActionRow>();
+		List<ActionRow> actionRows = new ArrayList<>();
 		// String select menu IDs "menu:role_row:1/2/3"
 		for (int row = 1; row <= 3; row++) {
 			ActionRow actionRow = createRoleRow(guild, row);
@@ -291,7 +279,7 @@ public class InteractionListener extends ListenerAdapter {
 	private ActionRow createRoleRow(final Guild guild, int row) {
 		List<Map<String, Object>> assignRoles = bot.getDBUtil().roles.getAssignableByRow(guild.getIdLong(), row);
 		if (assignRoles.isEmpty()) return null;
-		List<SelectOption> options = new ArrayList<SelectOption>();
+		List<SelectOption> options = new ArrayList<>();
 		for (Map<String, Object> data : assignRoles) {
 			if (options.size() >= 25) break;
 			String roleId = (String) data.getOrDefault("roleId", "0");
@@ -335,10 +323,10 @@ public class InteractionListener extends ListenerAdapter {
 		Guild guild = event.getGuild();
 		List<Role> currentRoles = event.getMember().getRoles();
 
-		List<Role> allRoles = new ArrayList<Role>();
+		List<Role> allRoles = new ArrayList<>();
 		db.roles.getAssignable(guild.getIdLong()).forEach(data -> allRoles.add(guild.getRoleById(data.get("roleId").toString())));
 		db.roles.getCustom(guild.getIdLong()).forEach(data -> allRoles.add(guild.getRoleById(data.get("roleId").toString())));
-		List<Role> roles = allRoles.stream().filter(role -> currentRoles.contains(role)).collect(Collectors.toList());
+		List<Role> roles = allRoles.stream().filter(currentRoles::contains).toList();
 		if (roles.isEmpty()) {
 			event.getHook().sendMessageEmbeds(bot.getEmbedUtil().getError(event, "bot.ticketing.listener.no_assigned")).setEphemeral(true).queue();
 			return;
@@ -358,13 +346,11 @@ public class InteractionListener extends ListenerAdapter {
 					List<Role> remove = actionEvent.getSelectedOptions().stream().map(option -> guild.getRoleById(option.getValue())).toList();
 					guild.modifyMemberRoles(event.getMember(), null, remove).reason("User request").queue(done -> {
 						msg.editMessageEmbeds(bot.getEmbedUtil().getEmbed()
-							.setDescription(lu.getText(event, "bot.ticketing.listener.remove_done").replace("{roles}", remove.stream().map(role -> role.getAsMention()).collect(Collectors.joining(", "))))
+							.setDescription(lu.getText(event, "bot.ticketing.listener.remove_done").replace("{roles}", remove.stream().map(Role::getAsMention).collect(Collectors.joining(", "))))
 							.setColor(Constants.COLOR_SUCCESS)
 							.build()
 						).setComponents().queue();
-					}, failure -> {
-						msg.editMessageEmbeds(bot.getEmbedUtil().getError(event, "bot.ticketing.listener.remove_failed", failure.getMessage())).setComponents().queue();
-					});
+					}, failure -> msg.editMessageEmbeds(bot.getEmbedUtil().getError(event, "bot.ticketing.listener.remove_failed", failure.getMessage())).setComponents().queue());
 				},
 				40,
 				TimeUnit.SECONDS,
@@ -390,9 +376,7 @@ public class InteractionListener extends ListenerAdapter {
 					.setColor(Constants.COLOR_SUCCESS)
 					.build()
 				).setEphemeral(true).queue();
-			}, failure -> {
-				sendError(event, "bot.ticketing.listener.toggle_failed", failure.getMessage());
-			});
+			}, failure -> sendError(event, "bot.ticketing.listener.toggle_failed", failure.getMessage()));
 		} else {
 			event.getGuild().addRoleToMember(event.getMember(), role).queue(done -> {
 				event.getHook().sendMessageEmbeds(bot.getEmbedUtil().getEmbed()
@@ -400,9 +384,7 @@ public class InteractionListener extends ListenerAdapter {
 					.setColor(Constants.COLOR_SUCCESS)
 					.build()
 				).setEphemeral(true).queue();
-			}, failure -> {
-				sendError(event, "bot.ticketing.listener.toggle_failed", failure.getMessage());
-			});
+			}, failure -> sendError(event, "bot.ticketing.listener.toggle_failed", failure.getMessage()));
 		}
 	}
 
@@ -421,24 +403,24 @@ public class InteractionListener extends ListenerAdapter {
 		// Check if bot is able to give selected roles
 		boolean otherRole = roleIds.contains("0");
 		List<Role> memberRoles = event.getMember().getRoles();
-		List<Role> add = roleIds.stream().filter(option -> !option.equals("0")).map(option -> guild.getRoleById(option))
+		List<Role> add = roleIds.stream().filter(option -> !option.equals("0")).map(guild::getRoleById)
 			.filter(role -> role != null && !memberRoles.contains(role)).toList();
 		if (!otherRole && add.isEmpty()) {
 			sendError(event, "bot.ticketing.listener.request_empty");
 			return;
 		}
 
-		Integer ticketId = 1 + db.tickets.lastIdByTag(guildId, 0);
-		event.getChannel().asTextChannel().createThreadChannel(lu.getLocalized(event.getGuildLocale(), "ticket.role")+"-"+ticketId.toString(), true).setInvitable(false).queue(
+		int ticketId = 1 + db.tickets.lastIdByTag(guildId, 0);
+		event.getChannel().asTextChannel().createThreadChannel(lu.getLocalized(event.getGuildLocale(), "ticket.role")+"-"+ticketId, true).setInvitable(false).queue(
 			channel -> {
 				db.tickets.addRoleTicket(ticketId, event.getMember().getIdLong(), guildId, channel.getIdLong(), String.join(";", roleIds));
 				
 				StringBuffer mentions = new StringBuffer(event.getMember().getAsMention());
-				db.access.getRoles(guildId, CmdAccessLevel.MOD).forEach(roleId -> mentions.append(" <@&"+roleId+">"));
+				db.access.getRoles(guildId, CmdAccessLevel.MOD).forEach(roleId -> mentions.append(" <@&").append(roleId).append(">"));
 				channel.sendMessage(mentions.toString()).queue(msg -> msg.delete().queueAfter(5, TimeUnit.SECONDS, null, new ErrorHandler().ignore(ErrorResponse.UNKNOWN_CHANNEL)));
 				
-				String rolesString = String.join(" ", add.stream().map(role -> role.getAsMention()).collect(Collectors.joining(" ")), (otherRole ? lu.getLocalized(event.getGuildLocale(), "bot.ticketing.embeds.other") : ""));
-				String proofString = add.stream().map(role -> db.roles.getDescription(role.getIdLong())).filter(str -> str != null).distinct().collect(Collectors.joining("\n- ", "- ", ""));
+				String rolesString = String.join(" ", add.stream().map(Role::getAsMention).collect(Collectors.joining(" ")), (otherRole ? lu.getLocalized(event.getGuildLocale(), "bot.ticketing.embeds.other") : ""));
+				String proofString = add.stream().map(role -> db.roles.getDescription(role.getIdLong())).filter(Objects::nonNull).distinct().collect(Collectors.joining("\n- ", "- ", ""));
 				MessageEmbed embed = new EmbedBuilder().setColor(db.getGuildSettings(guild).getColor())
 					.setDescription(String.format("%s\n> %s\n\n%s, %s\n%s\n\n%s",
 						lu.getLocalized(event.getGuildLocale(), "ticket.role_title"),
@@ -462,9 +444,7 @@ public class InteractionListener extends ListenerAdapter {
 					.setDescription(lu.getText(event, "bot.ticketing.listener.created").replace("{channel}", channel.getAsMention()))
 					.build()
 				).setComponents().queue();
-			}, failure -> {
-				event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getError(event, "bot.ticketing.listener.cant_create", failure.getMessage())).setComponents().queue();
-			}
+			}, failure -> event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getError(event, "bot.ticketing.listener.cant_create", failure.getMessage())).setComponents().queue()
 		);
 	}
 
@@ -474,8 +454,8 @@ public class InteractionListener extends ListenerAdapter {
 			sendError(event, "errors.interaction.no_access");
 			return;
 		}
-		Long channelId = event.getChannel().getIdLong();
-		if (!db.tickets.isOpened(channelId)) {
+		long channelId = event.getChannel().getIdLong();
+		if (db.tickets.isClosed(channelId)) {
 			sendError(event, "bot.ticketing.listener.is_closed");
 			return;
 		}
@@ -483,7 +463,7 @@ public class InteractionListener extends ListenerAdapter {
 		Long userId = db.tickets.getUserId(channelId);
 
 		guild.retrieveMemberById(userId).queue(member -> {
-			List<Role> roles = db.tickets.getRoleIds(channelId).stream().map(id -> guild.getRoleById(id)).filter(role -> role != null).toList();
+			List<Role> roles = db.tickets.getRoleIds(channelId).stream().map(guild::getRoleById).filter(Objects::nonNull).toList();
 			Integer ticketId = db.tickets.getTicketId(channelId);
 			if (roles.isEmpty()) {
 				event.getHook().sendMessageEmbeds(bot.getEmbedUtil().getEmbed(event)
@@ -503,24 +483,20 @@ public class InteractionListener extends ListenerAdapter {
 					member.getUser().openPrivateChannel().queue(dm -> {
 						Button showInvites = Button.secondary("invites:"+guild.getId(), lu.getLocalized(guild.getLocale(), "bot.ticketing.listener.invites.button"));
 						dm.sendMessage(lu.getLocalized(guild.getLocale(), "bot.ticketing.listener.role_dm")
-							.replace("{roles}", roles.stream().map(role -> role.getName()).collect(Collectors.joining(" | ")))
+							.replace("{roles}", roles.stream().map(Role::getName).collect(Collectors.joining(" | ")))
 							.replace("{server}", guild.getName())
 							.replace("{id}", ticketId.toString())
 							.replace("{mod}", event.getMember().getEffectiveName())
 						).addActionRow(showInvites).queue(null, new ErrorHandler().ignore(ErrorResponse.CANNOT_SEND_TO_USER));
 					});
-				}, failure -> {
-					sendError(event, "bot.ticketing.listener.role_failed", failure.getMessage());
-				});
+				}, failure -> sendError(event, "bot.ticketing.listener.role_failed", failure.getMessage()));
 			}
-		}, failure -> {
-			sendError(event, "bot.ticketing.listener.no_member", failure.getMessage());
-		});
+		}, failure -> sendError(event, "bot.ticketing.listener.no_member", failure.getMessage()));
 	}
 
 	private void buttonTicketClose(ButtonInteractionEvent event) {
 		long channelId = event.getChannel().getIdLong();
-		if (!db.tickets.isOpened(channelId)) {
+		if (db.tickets.isClosed(channelId)) {
 			// Ticket is closed
 			event.getChannel().delete().queue();
 			return;
@@ -529,7 +505,7 @@ public class InteractionListener extends ListenerAdapter {
 		event.getHook().sendMessageEmbeds(bot.getEmbedUtil().getEmbed(event).setDescription(lu.getLocalized(event.getGuildLocale(), "bot.ticketing.listener.delete_countdown")).build()).queue(msg -> {
 			bot.getTicketUtil().closeTicket(channelId, event.getUser(), (db.tickets.getUserId(channelId).equals(event.getUser().getIdLong()) ? "Closed by ticket's author" : "Closed by Support"), failure -> {
 				msg.editMessageEmbeds(bot.getEmbedUtil().getError(event, "bot.ticketing.listener.close_failed", failure.getMessage())).queue();
-				bot.getAppLogger().error("Couldn't close ticket with channelID:"+channelId, failure);
+				bot.getAppLogger().error("Couldn't close ticket with channelID:{}", channelId, failure);
 			});
 		});
 	}
@@ -537,7 +513,7 @@ public class InteractionListener extends ListenerAdapter {
 	private void buttonTicketCloseCancel(ButtonInteractionEvent event) {
 		long channelId = event.getChannel().getIdLong();
 		Guild guild = event.getGuild();
-		if (!db.tickets.isOpened(channelId)) {
+		if (db.tickets.isClosed(channelId)) {
 			// Ticket is closed
 			event.getChannel().delete().queue();
 			return;
@@ -558,7 +534,7 @@ public class InteractionListener extends ListenerAdapter {
 			return;
 		}
 		long channelId = event.getChannel().getIdLong();
-		if (!db.tickets.isOpened(channelId)) {
+		if (db.tickets.isClosed(channelId)) {
 			sendError(event, "bot.ticketing.listener.is_closed");
 			return;
 		}
@@ -582,7 +558,7 @@ public class InteractionListener extends ListenerAdapter {
 			return;
 		}
 		long channelId = event.getChannel().getIdLong();
-		if (!db.tickets.isOpened(channelId)) {
+		if (db.tickets.isClosed(channelId)) {
 			sendError(event, "bot.ticketing.listener.is_closed");
 			return;
 		}
@@ -601,7 +577,7 @@ public class InteractionListener extends ListenerAdapter {
 	// Tag, create ticket
 	private void buttonTagCreateTicket(ButtonInteractionEvent event) {
 		long guildId = event.getGuild().getIdLong();
-		Integer tagId = Integer.valueOf(event.getComponentId().split(":")[1]);
+		int tagId = Integer.parseInt(event.getComponentId().split(":")[1]);
 
 		Long channelId = db.tickets.getOpenedChannel(event.getMember().getIdLong(), guildId, tagId);
 		if (channelId != null) {
@@ -632,7 +608,7 @@ public class InteractionListener extends ListenerAdapter {
 			.map(text -> text.replace("{username}", user.getName()).replace("{tag_username}", user.getAsMention()))
 			.orElse("Ticket's controls");
 		
-		Integer ticketId = 1 + db.tickets.lastIdByTag(guildId, tagId);
+		int ticketId = 1 + db.tickets.lastIdByTag(guildId, tagId);
 		String ticketName = (tag.getTicketName()+ticketId).replace("{username}", user.getName());
 		if (tag.getTagType() == 1) {
 			// Thread ticket
@@ -641,9 +617,7 @@ public class InteractionListener extends ListenerAdapter {
 				
 				bot.getTicketUtil().createTicket(event, channel, mentions.toString(), message);
 			},
-			failure -> {
-				sendTicketError(event, "Unable to create new thread in this channel");
-			});
+			failure -> sendTicketError(event, "Unable to create new thread in this channel"));
 		} else {
 			// Channel ticket
 			Category category = Optional.ofNullable(tag.getLocation()).map(id -> event.getGuild().getCategoryById(id)).orElse(event.getChannel().asTextChannel().getParentCategory());
@@ -653,7 +627,7 @@ public class InteractionListener extends ListenerAdapter {
 			}
 
 			ChannelAction<TextChannel> action = category.createTextChannel(ticketName).clearPermissionOverrides();
-			for (String roleId : supportRoles) action = action.addRolePermissionOverride(Long.valueOf(roleId), EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND), null);
+			for (String roleId : supportRoles) action = action.addRolePermissionOverride(Long.parseLong(roleId), EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND), null);
 			action.addPermissionOverride(event.getGuild().getPublicRole(), null, EnumSet.of(Permission.VIEW_CHANNEL))
 				.addMemberPermissionOverride(user.getIdLong(), EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND), null)
 				.queue(channel -> {
@@ -661,9 +635,7 @@ public class InteractionListener extends ListenerAdapter {
 
 				bot.getTicketUtil().createTicket(event, channel, mentions.toString(), message);
 			}, 
-			failure -> {
-				sendTicketError(event, "Unable to create new channel in target category, with ID: "+tag.getLocation());
-			});
+			failure -> sendTicketError(event, "Unable to create new channel in target category, with ID: "+tag.getLocation()));
 		}
 	}
 
@@ -831,7 +803,7 @@ public class InteractionListener extends ListenerAdapter {
 		EmbedBuilder embedBuilder2 = embedBuilder;
 		List<PermissionOverride> ovs = overrides;
 
-		guild.retrieveMembersByIds(false, overrides.stream().map(ov -> ov.getId()).toArray(String[]::new)).onSuccess(
+		guild.retrieveMembersByIds(false, overrides.stream().map(PermissionOverride::getId).toArray(String[]::new)).onSuccess(
 			members -> {
 				if (members.isEmpty()) {
 					embedBuilder2.appendDescription(lu.getText(event, "bot.voice.listener.panel.perms.none") + "\n");
@@ -840,8 +812,12 @@ public class InteractionListener extends ListenerAdapter {
 						String view2 = contains(ov, Permission.VIEW_CHANNEL);
 						String join2 = contains(ov, Permission.VOICE_CONNECT);
 
-						Member find = members.stream().filter(m -> m.getId().equals(ov.getId())).findFirst().get(); 
-						embedBuilder2.appendDescription("> %s | %s | `%s`\n".formatted(view2, join2, find.getEffectiveName()));
+						String name = members.stream()
+							.filter(m -> m.getId().equals(ov.getId()))
+							.findFirst()
+							.map(Member::getEffectiveName)
+							.orElse("Unknown");
+						embedBuilder2.appendDescription("> %s | %s | `%s`\n".formatted(view2, join2, name));
 					}
 				}
 
@@ -871,7 +847,7 @@ public class InteractionListener extends ListenerAdapter {
 		}
 
 		long guildId = event.getGuild().getIdLong();
-		List<Integer> groupIds = new ArrayList<Integer>();
+		List<Integer> groupIds = new ArrayList<>();
 		groupIds.addAll(bot.getDBUtil().group.getOwnedGroups(guildId));
 		groupIds.addAll(bot.getDBUtil().group.getManagedGroups(guildId));
 		if (groupIds.isEmpty()) {
@@ -888,7 +864,206 @@ public class InteractionListener extends ListenerAdapter {
 			.addOptions(groupIds.stream().map(groupId ->
 				SelectOption.of(bot.getDBUtil().group.getName(groupId), groupId.toString()).withDescription("ID: "+groupId)
 			).collect(Collectors.toList()))
-			.setMaxValues(1)
+			.setMaxValues(MAX_GROUP_SELECT)
+			.build();
+
+		event.getHook().sendMessageEmbeds(embed).setActionRow(menu).setEphemeral(true).queue(msg -> waiter.waitForEvent(
+			StringSelectInteractionEvent.class,
+			e -> e.getMessageId().equals(msg.getId()),
+			selectEvent -> {
+				selectEvent.deferEdit().queue();
+				List<Integer> selected = selectEvent.getValues().stream().map(Integer::parseInt).toList();
+
+				event.getJDA().retrieveUserById(userId).queue(user -> {
+					selected.forEach(groupId -> {
+						if (!db.blacklist.inGroupUser(groupId, caseData.getTargetId()))
+							db.blacklist.add(selectEvent.getGuild().getIdLong(), groupId, user.getIdLong(), caseData.getReason(), selectEvent.getUser().getIdLong());
+
+						bot.getHelper().runBan(groupId, event.getGuild(), user, caseData.getReason());
+					});
+
+					// Log to master
+					bot.getLogger().mod.onBlacklistAdded(event.getUser(), user, selected);
+					// Reply
+					selectEvent.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed()
+						.setColor(Constants.COLOR_SUCCESS)
+						.setDescription(lu.getText(event, "bot.moderation.blacklist.done"))
+						.build())
+					.setComponents().queue();
+				},
+				failure -> selectEvent.getHook().editOriginalEmbeds(
+					bot.getEmbedUtil().getError(selectEvent, "bot.moderation.blacklist.no_user", failure.getMessage())
+				).setComponents().queue());
+			},
+			20,
+			TimeUnit.SECONDS,
+			() -> msg.editMessageComponents(ActionRow.of(menu.asDisabled())).queue()
+		));
+	}
+
+	private void buttonSyncBan(ButtonInteractionEvent event) {
+		if (!bot.getCheckUtil().hasAccess(event.getMember(), CmdAccessLevel.OPERATOR)) {
+			sendError(event, "errors.interaction.no_access");
+			return;
+		}
+
+		if (bot.getHelper() == null) {
+			sendError(event, "errors.no_helper");
+			return;
+		}
+
+		String userId = event.getComponentId().split(":")[1];
+		CaseData caseData = db.cases.getMemberActive(Long.parseLong(userId), event.getGuild().getIdLong(), CaseType.BAN);
+		if (caseData == null || !caseData.getDuration().isZero()) {
+			sendError(event, "bot.moderation.sync.expired");
+			return;
+		}
+
+		long guildId = event.getGuild().getIdLong();
+		List<Integer> groupIds = new ArrayList<>();
+		groupIds.addAll(bot.getDBUtil().group.getOwnedGroups(guildId));
+		groupIds.addAll(bot.getDBUtil().group.getManagedGroups(guildId));
+		if (groupIds.isEmpty()) {
+			sendError(event, "bot.moderation.sync.no_groups");
+			return;
+		}
+
+		MessageEmbed embed = bot.getEmbedUtil().getEmbed()
+			.setColor(Constants.COLOR_WARNING)
+			.setDescription(lu.getText(event, "bot.moderation.sync.ban.title"))
+			.build();
+		StringSelectMenu menu = StringSelectMenu.create("groupId")
+			.setPlaceholder(lu.getText(event, "bot.moderation.sync.select"))
+			.addOptions(groupIds.stream().map(groupId ->
+				SelectOption.of(bot.getDBUtil().group.getName(groupId), groupId.toString()).withDescription("ID: "+groupId)
+			).collect(Collectors.toList()))
+			.setMaxValues(MAX_GROUP_SELECT)
+			.build();
+
+		event.getHook().sendMessageEmbeds(embed).setActionRow(menu).setEphemeral(true).queue(msg -> waiter.waitForEvent(
+			StringSelectInteractionEvent.class,
+			e -> e.getMessageId().equals(msg.getId()),
+			selectEvent -> {
+				selectEvent.deferEdit().queue();
+				List<Integer> selected = selectEvent.getValues().stream().map(Integer::parseInt).toList();
+
+				event.getJDA().retrieveUserById(userId).queue(user -> {
+						selected.forEach(groupId -> bot.getHelper().runBan(groupId, event.getGuild(), user, caseData.getReason()));
+						// Reply
+						selectEvent.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed()
+								.setColor(Constants.COLOR_SUCCESS)
+								.setDescription(lu.getText(event, "bot.moderation.sync.ban.done"))
+								.build())
+							.setComponents().queue();
+					},
+					failure -> selectEvent.getHook().editOriginalEmbeds(
+						bot.getEmbedUtil().getError(selectEvent, "bot.moderation.sync.no_user", failure.getMessage())
+					).setComponents().queue());
+			},
+			20,
+			TimeUnit.SECONDS,
+			() -> msg.editMessageComponents(ActionRow.of(menu.asDisabled())).queue()
+		));
+	}
+
+	private void buttonSyncUnban(ButtonInteractionEvent event) {
+		if (!bot.getCheckUtil().hasAccess(event.getMember(), CmdAccessLevel.OPERATOR)) {
+			sendError(event, "errors.interaction.no_access");
+			return;
+		}
+
+		long guildId = event.getGuild().getIdLong();
+		List<Integer> groupIds = new ArrayList<>();
+		groupIds.addAll(bot.getDBUtil().group.getOwnedGroups(guildId));
+		groupIds.addAll(bot.getDBUtil().group.getManagedGroups(guildId));
+		if (groupIds.isEmpty()) {
+			sendError(event, "bot.moderation.sync.no_groups");
+			return;
+		}
+
+		MessageEmbed embed = bot.getEmbedUtil().getEmbed()
+			.setColor(Constants.COLOR_WARNING)
+			.setDescription(lu.getText(event, "bot.moderation.sync.unban.title"))
+			.build();
+		StringSelectMenu menu = StringSelectMenu.create("groupId")
+			.setPlaceholder(lu.getText(event, "bot.moderation.sync.select"))
+			.addOptions(groupIds.stream().map(groupId ->
+				SelectOption.of(bot.getDBUtil().group.getName(groupId), groupId.toString()).withDescription("ID: "+groupId)
+			).collect(Collectors.toList()))
+			.setMaxValues(MAX_GROUP_SELECT)
+			.build();
+
+		event.getHook().sendMessageEmbeds(embed).setActionRow(menu).setEphemeral(true).queue(msg -> waiter.waitForEvent(
+			StringSelectInteractionEvent.class,
+			e -> e.getMessageId().equals(msg.getId()),
+			selectEvent -> {
+				selectEvent.deferEdit().queue();
+				List<Integer> selected = selectEvent.getValues().stream().map(Integer::parseInt).toList();
+
+				event.getJDA().retrieveUserById(event.getComponentId().split(":")[1]).queue(user -> {
+					selected.forEach(groupId -> {
+						if (db.blacklist.inGroupUser(groupId, user.getIdLong())) {
+							db.blacklist.removeUser(groupId, user.getIdLong());
+							bot.getLogger().mod.onBlacklistRemoved(event.getUser(), user, groupId);
+						}
+
+						bot.getHelper().runUnban(groupId, event.getGuild(), user, "Sync group unban, by "+event.getUser().getName());
+					});
+
+					// Reply
+					selectEvent.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed()
+						.setColor(Constants.COLOR_SUCCESS)
+						.setDescription(lu.getText(event, "bot.moderation.sync.unban.done"))
+						.build())
+					.setComponents().queue();
+				},
+				failure -> selectEvent.getHook().editOriginalEmbeds(
+					bot.getEmbedUtil().getError(selectEvent, "bot.moderation.sync.no_user", failure.getMessage())
+				).setComponents().queue());
+			},
+			20,
+			TimeUnit.SECONDS,
+			() -> msg.editMessageComponents(ActionRow.of(menu.asDisabled())).queue()
+		));
+	}
+
+	private void buttonSyncKick(ButtonInteractionEvent event) {
+		if (!bot.getCheckUtil().hasAccess(event.getMember(), CmdAccessLevel.OPERATOR)) {
+			sendError(event, "errors.interaction.no_access");
+			return;
+		}
+
+		if (bot.getHelper() == null) {
+			sendError(event, "errors.no_helper");
+			return;
+		}
+
+		String userId = event.getComponentId().split(":")[1];
+		CaseData caseData = db.cases.getMemberActive(Long.parseLong(userId), event.getGuild().getIdLong(), CaseType.BAN);
+		if (caseData == null || !caseData.getDuration().isZero()) {
+			sendError(event, "bot.moderation.sync.expired");
+			return;
+		}
+
+		long guildId = event.getGuild().getIdLong();
+		List<Integer> groupIds = new ArrayList<>();
+		groupIds.addAll(bot.getDBUtil().group.getOwnedGroups(guildId));
+		groupIds.addAll(bot.getDBUtil().group.getManagedGroups(guildId));
+		if (groupIds.isEmpty()) {
+			sendError(event, "bot.moderation.sync.no_groups");
+			return;
+		}
+
+		MessageEmbed embed = bot.getEmbedUtil().getEmbed()
+			.setColor(Constants.COLOR_WARNING)
+			.setDescription(lu.getText(event, "bot.moderation.sync.kick.title"))
+			.build();
+		StringSelectMenu menu = StringSelectMenu.create("groupId")
+			.setPlaceholder(lu.getText(event, "bot.moderation.sync.select"))
+			.addOptions(groupIds.stream().map(groupId ->
+				SelectOption.of(bot.getDBUtil().group.getName(groupId), groupId.toString()).withDescription("ID: "+groupId)
+			).collect(Collectors.toList()))
+			.setMaxValues(MAX_GROUP_SELECT)
 			.build();
 
 		event.getHook().sendMessageEmbeds(embed).setActionRow(menu).setEphemeral(true).queue(msg -> {
@@ -900,92 +1075,17 @@ public class InteractionListener extends ListenerAdapter {
 					List<Integer> selected = selectEvent.getValues().stream().map(Integer::parseInt).toList();
 
 					event.getJDA().retrieveUserById(userId).queue(user -> {
-						selected.forEach(groupId -> {
-							if (!db.blacklist.inGroupUser(groupId, caseData.getTargetId()))
-								db.blacklist.add(selectEvent.getGuild().getIdLong(), groupId, user.getIdLong(), caseData.getReason(), selectEvent.getUser().getIdLong());
-	
-							bot.getHelper().runBan(groupId, event.getGuild(), user, caseData.getReason());
-						});
-
-						// Log to master
-						bot.getLogger().mod.onBlacklistAdded(event.getUser(), user, selected);
-						// Reply
-						selectEvent.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed()
-							.setColor(Constants.COLOR_SUCCESS)
-							.setDescription(lu.getText(event, "bot.moderation.blacklist.done"))
-							.build())
-						.setComponents().queue();
-					},
-					failure -> {
-						selectEvent.getHook().editOriginalEmbeds(
-							bot.getEmbedUtil().getError(selectEvent, "bot.moderation.blacklist.no_user", failure.getMessage())
-						).setComponents().queue();
-					});
-				},
-				20,
-				TimeUnit.SECONDS,
-				() -> msg.editMessageComponents(ActionRow.of(menu.asDisabled())).queue()
-			);
-		});
-	}
-
-	private void buttonUnbanSync(ButtonInteractionEvent event) {
-		if (!bot.getCheckUtil().hasAccess(event.getMember(), CmdAccessLevel.OPERATOR)) {
-			sendError(event, "errors.interaction.no_access");
-			return;
-		}
-
-		long guildId = event.getGuild().getIdLong();
-		List<Integer> groupIds = new ArrayList<Integer>();
-		groupIds.addAll(bot.getDBUtil().group.getOwnedGroups(guildId));
-		groupIds.addAll(bot.getDBUtil().group.getManagedGroups(guildId));
-		if (groupIds.isEmpty()) {
-			sendError(event, "bot.moderation.sync.unban.no_groups");
-			return;
-		}
-
-		MessageEmbed embed = bot.getEmbedUtil().getEmbed()
-			.setColor(Constants.COLOR_WARNING)
-			.setDescription(lu.getText(event, "bot.moderation.sync.unban.title"))
-			.build();
-		StringSelectMenu menu = StringSelectMenu.create("groupId")
-			.setPlaceholder(lu.getText(event, "bot.moderation.sync.unban.value"))
-			.addOptions(groupIds.stream().map(groupId ->
-				SelectOption.of(bot.getDBUtil().group.getName(groupId), groupId.toString()).withDescription("ID: "+groupId)
-			).collect(Collectors.toList()))
-			.setMaxValues(1)
-			.build();
-
-		event.getHook().sendMessageEmbeds(embed).setActionRow(menu).setEphemeral(true).queue(msg -> {
-			waiter.waitForEvent(
-				StringSelectInteractionEvent.class,
-				e -> e.getMessageId().equals(msg.getId()),
-				selectEvent -> {
-					selectEvent.deferEdit().queue();
-					List<Integer> selected = selectEvent.getValues().stream().map(Integer::parseInt).toList();;
-
-					event.getJDA().retrieveUserById(event.getComponentId().split(":")[1]).queue(user -> {
-						selected.forEach(groupId -> {
-							if (db.blacklist.inGroupUser(groupId, user.getIdLong())) {
-								db.blacklist.removeUser(groupId, user.getIdLong());
-								bot.getLogger().mod.onBlacklistRemoved(event.getUser(), user, groupId);
-							}
-	
-							bot.getHelper().runUnban(groupId, event.getGuild(), user, "Sync group unban");
-						});
-
-						// Reply
-						selectEvent.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed()
-							.setColor(Constants.COLOR_SUCCESS)
-							.setDescription(lu.getText(event, "bot.moderation.sync.unban.done"))
-							.build())
-						.setComponents().queue();
-					},
-					failure -> {
-						selectEvent.getHook().editOriginalEmbeds(
-							bot.getEmbedUtil().getError(selectEvent, "bot.moderation.sync.unban.no_user", failure.getMessage())
-						).setComponents().queue();
-					});
+							selected.forEach(groupId -> bot.getHelper().runKick(groupId, event.getGuild(), user, caseData.getReason()));
+							// Reply
+							selectEvent.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed()
+									.setColor(Constants.COLOR_SUCCESS)
+									.setDescription(lu.getText(event, "bot.moderation.sync.kick.done"))
+									.build())
+								.setComponents().queue();
+						},
+						failure -> selectEvent.getHook().editOriginalEmbeds(
+							bot.getEmbedUtil().getError(selectEvent, "bot.moderation.sync.no_user", failure.getMessage())
+						).setComponents().queue());
 				},
 				20,
 				TimeUnit.SECONDS,
@@ -996,7 +1096,7 @@ public class InteractionListener extends ListenerAdapter {
 
 	// Strikes
 	private void buttonShowStrikes(ButtonInteractionEvent event) {
-		Long guildId = Long.valueOf(event.getComponentId().split(":")[1]);
+		long guildId = Long.parseLong(event.getComponentId().split(":")[1]);
 		Pair<Integer, Integer> strikeData = bot.getDBUtil().strikes.getDataCountAndDate(guildId, event.getUser().getIdLong());
 		if (strikeData == null) {
 			event.getHook().sendMessageEmbeds(bot.getEmbedUtil().getEmbed().setDescription(lu.getText(event, "bot.moderation.no_strikes")).build()).queue();
@@ -1007,7 +1107,68 @@ public class InteractionListener extends ListenerAdapter {
 		event.getHook().sendMessageEmbeds(bot.getEmbedUtil().getEmbed()
 			.setDescription(lu.getText(event, "bot.moderation.strikes_embed").formatted(strikeData.getLeft(), TimeFormat.RELATIVE.atInstant(time)))
 			.build()
-		).queue();
+		).setEphemeral(true).queue();
+	}
+
+	// Roles modify
+	private void buttonModifyConfirm(ButtonInteractionEvent event) {
+		long guildId = event.getGuild().getIdLong();
+		long userId = event.getUser().getIdLong();
+		long targetId = Long.parseLong(event.getComponentId().split(":")[2]);
+
+		// If expired don't allow to modify embed
+		if (db.modifyRole.isExpired(guildId, userId, targetId)) {
+			event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getError(event, "bot.roles.role.modify.expired"))
+				.setComponents().queue();
+			return;
+		}
+
+		event.getGuild().retrieveMemberById(targetId).queue(target -> {
+				List<Long> addIds = new ArrayList<>();
+				List<Long> removeIds = new ArrayList<>();
+				// Retrieve selected roles
+				for (String line : db.modifyRole.getRoles(guildId, userId, targetId).split(":")) {
+					if (line.isBlank()) continue;
+					String[] roleIds = line.split(";");
+					for (String roleId : roleIds) {
+						// Check if first char is '+' add or '-' remove
+						if (roleId.charAt(0) == '+') addIds.add(Long.parseLong(roleId.substring(1)));
+						else removeIds.add(Long.parseLong(roleId.substring(1)));
+					}
+				}
+				if (addIds.isEmpty() && removeIds.isEmpty()) {
+					sendError(event, "bot.roles.role.modify.no_change");
+					return;
+				}
+
+				Guild guild = target.getGuild();
+				List<Role> finalRoles = new ArrayList<>(target.getRoles());
+				finalRoles.addAll(addIds.stream().map(guild::getRoleById).toList());
+				finalRoles.removeAll(removeIds.stream().map(guild::getRoleById).toList());
+
+				guild.modifyMemberRoles(target, finalRoles).reason("by "+event.getMember().getEffectiveName()).queue(done -> {
+						// Remove from DB
+						db.modifyRole.remove(guildId, userId, targetId);
+						// text
+						StringBuilder builder = new StringBuilder();
+						if (!addIds.isEmpty()) builder.append("\n**Added**: ")
+							.append(addIds.stream().map(String::valueOf).collect(Collectors.joining(">, <@&", "<@&", ">")));
+						if (!removeIds.isEmpty()) builder.append("\n**Removed**: ")
+							.append(removeIds.stream().map(String::valueOf).collect(Collectors.joining(">, <@&", "<@&", ">")));
+						String rolesString = builder.toString();
+						// Log
+						bot.getLogger().role.onRolesModified(guild, event.getUser(), target.getUser(), rolesString);
+						// Send reply
+						event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getEmbed(Constants.COLOR_SUCCESS)
+							.setDescription(lu.getText(event, "bot.roles.role.modify.done").formatted(target.getAsMention(), rolesString))
+							.build()
+						).setComponents().queue();
+					}, failure -> event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getError(event, "errors.error", "Unable to modify roles, User ID: "+targetId))
+						.setComponents().queue()
+				);
+			}, failure -> event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getError(event, "errors.error", "Member not found, ID: "+targetId))
+				.setComponents().queue()
+		);
 	}
 
 	@Override
@@ -1016,7 +1177,7 @@ public class InteractionListener extends ListenerAdapter {
 		String modalId = event.getModalId();
 
 		if (modalId.equals("vfpanel")) {
-			if (event.getValues().size() == 0) {
+			if (event.getValues().isEmpty()) {
 				sendError(event, "errors.interaction.no_values");
 				return;
 			}
@@ -1050,6 +1211,55 @@ public class InteractionListener extends ListenerAdapter {
 				.addField(lu.getText(event, "bot.ticketing.listener.request_selected"), selectedRolesString(roleIds, event.getUserLocale()), false)
 				.build();
 			event.getHook().editOriginalEmbeds(embed).queue();
+		} else if (menuId.startsWith("role:manage-select")) {
+			listModifySelect(event);
+		}
+	}
+
+	private final Pattern splitPattern = Pattern.compile(":");
+
+	// Roles modify
+	private void listModifySelect(StringSelectInteractionEvent event) {
+		event.deferEdit().queue();
+		try {
+			long guildId = event.getGuild().getIdLong();
+			long userId = event.getUser().getIdLong();
+			long targetId = Long.parseLong(event.getComponentId().split(":")[3]);
+
+			// If expired don't allow to modify
+			if (db.modifyRole.isExpired(guildId, userId, targetId)) {
+				event.getHook().editOriginalEmbeds(bot.getEmbedUtil().getError(event, "bot.roles.role.modify.expired"))
+					.setComponents().queue();
+				return;
+			}
+
+			List<String> changes = new ArrayList<>();
+
+			List<SelectOption> defaultOptions = event.getSelectMenu().getOptions().stream().filter(SelectOption::isDefault).toList();
+			List<SelectOption> selectedOptions = event.getSelectedOptions();
+			// if default is not in selected - role is removed
+			for (SelectOption option : defaultOptions) {
+				if (!selectedOptions.contains(option)) changes.add("-"+option.getValue());
+			}
+			// if selected is not in default - role is added
+			for (SelectOption option : selectedOptions) {
+				if (!defaultOptions.contains(option)) changes.add("+"+option.getValue());
+			}
+
+			String newValue = String.join(";", changes);
+
+			// "1:2:3:4"
+			// each section stores changes for each menu
+			int menuId = Integer.parseInt(event.getComponentId().split(":")[2]);
+			String[] data = splitPattern.split(db.modifyRole.getRoles(guildId, userId, targetId), 4);
+			if (data.length != 4) data = new String[]{"", "", "", ""};
+			data[menuId-1] = newValue;
+			db.modifyRole.update(guildId, userId, targetId, String.join(":", data), Instant.now().plus(2, ChronoUnit.MINUTES));
+		} catch(Throwable t) {
+			// Log throwable and try to respond to the user with the error
+			// Thrown errors are not user's error, but code's fault as such things should be caught earlier and replied properly
+			bot.getAppLogger().error("Role modify Exception", t);
+			bot.getEmbedUtil().sendUnknownError(event.getHook(), event.getUserLocale(), t.getMessage());
 		}
 	}
 
@@ -1090,7 +1300,7 @@ public class InteractionListener extends ListenerAdapter {
 				}
 
 				List<String> mentionStrings = new ArrayList<>();
-				String text = "";
+				String text;
 
 				VoiceChannelManager manager = vc.getManager();
 				
@@ -1129,12 +1339,14 @@ public class InteractionListener extends ListenerAdapter {
 
 				final MessageEmbed embed = bot.getEmbedUtil().getEmbed(event).setDescription(text).build();
 				manager.queue(done -> {
-					event.getHook().editOriginalEmbeds(embed)
-						.setContent("").setComponents().queue();
-				}, failure -> {
-					event.getHook().editOriginal(MessageEditData.fromCreateData(bot.getEmbedUtil().createPermError(event, Permission.MANAGE_PERMISSIONS, true)))
-						.setContent("").setComponents().queue();
-				});
+					event.getHook()
+						.editOriginalEmbeds(embed)
+						.setContent("")
+						.setComponents().queue();
+				}, failure -> event.getHook()
+					.editOriginal(MessageEditData.fromCreateData(bot.getEmbedUtil().createPermError(event, Permission.MANAGE_PERMISSIONS, true)))
+					.setContent("")
+					.setComponents().queue());
 			}
 		}
 	}
@@ -1175,7 +1387,9 @@ public class InteractionListener extends ListenerAdapter {
 		BUTTON_TICKET_CREATE(30, CooldownScope.USER),
 		BUTTON_INVITES(10, CooldownScope.USER),
 		BUTTON_REPORT_DELETE(3, CooldownScope.GUILD),
-		BUTTON_SHOW_STRIKES(30, CooldownScope.USER);
+		BUTTON_SHOW_STRIKES(30, CooldownScope.USER),
+		BUTTON_SYNC_ACTION(10, CooldownScope.CHANNEL),
+		BUTTON_MODIFY_CONFIRM(10, CooldownScope.USER);
 
 		private final int time;
 		private final CooldownScope scope;
@@ -1197,23 +1411,21 @@ public class InteractionListener extends ListenerAdapter {
 	private String getCooldownKey(Cooldown cooldown, GenericInteractionCreateEvent event) {
 		String name = cooldown.toString();
 		CooldownScope cooldownScope = cooldown.getScope();
-		switch (cooldown.getScope()) {
-			case USER:         return cooldownScope.genKey(name,event.getUser().getIdLong());
-			case USER_GUILD:   return Optional.of(event.getGuild()).map(g -> cooldownScope.genKey(name,event.getUser().getIdLong(),g.getIdLong()))
-				.orElse(CooldownScope.USER_CHANNEL.genKey(name,event.getUser().getIdLong(), event.getChannel().getIdLong()));
-			case USER_CHANNEL: return cooldownScope.genKey(name,event.getUser().getIdLong(),event.getChannel().getIdLong());
-			case GUILD:        return Optional.of(event.getGuild()).map(g -> cooldownScope.genKey(name,g.getIdLong()))
-				.orElse(CooldownScope.CHANNEL.genKey(name,event.getChannel().getIdLong()));
-			case CHANNEL:      return cooldownScope.genKey(name,event.getChannel().getIdLong());
-			case SHARD:
-				event.getJDA().getShardInfo();
-				return cooldownScope.genKey(name, event.getJDA().getShardInfo().getShardId());
-			case USER_SHARD:
-				event.getJDA().getShardInfo();
-				return cooldownScope.genKey(name,event.getUser().getIdLong(),event.getJDA().getShardInfo().getShardId());
-			case GLOBAL:       return cooldownScope.genKey(name, 0);
-			default:           return "";
-		}
+		return switch (cooldown.getScope()) {
+			case USER -> cooldownScope.genKey(name, event.getUser().getIdLong());
+			case USER_GUILD ->
+				Optional.of(event.getGuild()).map(g -> cooldownScope.genKey(name, event.getUser().getIdLong(), g.getIdLong()))
+					.orElse(CooldownScope.USER_CHANNEL.genKey(name, event.getUser().getIdLong(), event.getChannel().getIdLong()));
+			case USER_CHANNEL ->
+				cooldownScope.genKey(name, event.getUser().getIdLong(), event.getChannel().getIdLong());
+			case GUILD -> Optional.of(event.getGuild()).map(g -> cooldownScope.genKey(name, g.getIdLong()))
+				.orElse(CooldownScope.CHANNEL.genKey(name, event.getChannel().getIdLong()));
+			case CHANNEL -> cooldownScope.genKey(name, event.getChannel().getIdLong());
+			case SHARD -> cooldownScope.genKey(name, event.getJDA().getShardInfo().getShardId());
+			case USER_SHARD ->
+				cooldownScope.genKey(name, event.getUser().getIdLong(), event.getJDA().getShardInfo().getShardId());
+			case GLOBAL -> cooldownScope.genKey(name, 0);
+		};
 	}
 
 	private MessageCreateData getCooldownErrorString(Cooldown cooldown, GenericInteractionCreateEvent event, int remaining) {
@@ -1224,14 +1436,12 @@ public class InteractionListener extends ListenerAdapter {
 			.replace("{time}", Integer.toString(remaining))
 		);
 		CooldownScope cooldownScope = cooldown.getScope();
-		if (cooldownScope.equals(CooldownScope.USER))
-			{}
-		else if (cooldownScope.equals(CooldownScope.USER_GUILD) && event.getGuild()==null)
-			front.append(" " + lu.getLocalized(event.getUserLocale(), CooldownScope.USER_CHANNEL.getErrorPath()));
+		if (cooldownScope.equals(CooldownScope.USER_GUILD) && event.getGuild()==null)
+			front.append(" ").append(lu.getLocalized(event.getUserLocale(), CooldownScope.USER_CHANNEL.getErrorPath()));
 		else if (cooldownScope.equals(CooldownScope.GUILD) && event.getGuild()==null)
-			front.append(" " + lu.getLocalized(event.getUserLocale(), CooldownScope.CHANNEL.getErrorPath()));
-		else
-			front.append(" " + lu.getLocalized(event.getUserLocale(), cooldownScope.getErrorPath()));
+			front.append(" ").append(lu.getLocalized(event.getUserLocale(), CooldownScope.CHANNEL.getErrorPath()));
+		else if (!cooldownScope.equals(CooldownScope.USER))
+			front.append(" ").append(lu.getLocalized(event.getUserLocale(), cooldownScope.getErrorPath()));
 
 		return MessageCreateData.fromContent(Objects.requireNonNull(front.append("!").toString()));
 	}
